[project]
name = "streamlit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "langchain-ollama>=0.2.0",
    "pathlib>=1.0.1",
    "streamlit-ace>=0.1.1",
    "streamlit-monaco>=0.1.3",
    "streamlit-quill>=0.0.3",
    "streamlit>=1.38.0",
]
